fix date displays, and allow wrap if needed

--- a/client/css/less/components/ticket-list.less
+++ b/client/css/less/components/ticket-list.less
@@ -40,7 +40,6 @@
           font-weight: 400;
           font-size: 16px;
           text-align: right;
-          white-space: nowrap;
         }
 
         .tags {
